# hapli

./: .gitignore  CLAUDE.md  DEVELOPER.md  GEMINI.md  Now you can run  README.md  The corrected command is  USECASE.md  Usage examples  hapli.py  hierarchical-align.groovy  main.py  pyproject.toml  requirements.txt
data/: example.gfa  example.gff3  test_variants.py
docs/: PERFORMANCE.md  paper_outline.md  sv_submission_plan.md  walkthrough.md
hapli/: __init__.py  cli.py  gam_parser.py  gff_alignment.py  impact_detector.py  tui.py
resources/: MANIFEST.md  download_papers.sh  retry_failed.sh
scripts/: align_gff_to_graph.py  analyze_impact.py  build_pangenome.py  call_variants.py  debug_alignments.py  download_1000g_sv.py  download_1000g_vcf.py  download_grch37_gff3.py  download_grch38.py  download_grch38_gff3.py  download_hs37d5.py  fasta_to_gfa.py  filter_gff_by_region.py  generate_comprehensive_test_data.py  generate_example_data.py  generate_example_gfa2.py  generate_genome_features.py  generate_paper_cases.py  hierarchical_gene_aligner.py  regenerate_test_data.sh  run_genome_workflow.py  run_grch38_workflow.py  sam_to_gfa.py  validate_gfa2.py  vcf_phasing_fix.py  vcf_to_gfa_converter.py
src/: config.py  config.yaml  main.py  path_analysis.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_aligner.py  test_alignment.py  test_alignment_result.py  test_alphamissense.py  test_alphamissense_pipeline.py  test_analysis.py  test_annotsv.py  test_benchmark_smokes.py  test_clinvar.py  test_config.py  test_consensus.py  test_core.py  test_csq.py  test_data_loading.py  test_data_validation.py  test_diploid.py  test_diploid_analyzer_demo.py  test_epistasis.py  test_fasta_parser.py  test_feature_graph.py  test_gam_parser_demo.py  test_gfa_parser.py  test_gff_alignment.py  test_gff_parser.py  test_haplotype_scoring.py  test_head_to_head.py  test_hgvs.py  test_hgvs_formatter.py  test_impact_classifier.py  test_impact_detector_demo.py  test_indigena.py  test_io.py  test_liftoff.py  test_llm_prompt.py  test_main_basic.py  (+14 more)
(+154 files in other folders)
