[project]
name = "hapli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "biopython>=1.86",
    "gffutils>=0.13",
    "pysam>=0.23.3",
    "rich>=14.2.0",
    "snakemake>=7.32.4",
    "textual>=6.9.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
